# knowledge-hub-os

./: .bazelignore  .bazelrc  .env.prod.example  .gitignore  BUILD.bazel  DEPLOYMENT.md  MODULE.bazel  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  run_test.py  test-e2e.js  test_models.py  tsconfig.json
apps/ai-service/: BUILD.bazel  Dockerfile  list_models.py  main.py  requirements.in  requirements.txt  test_ai.py
apps/api-gateway/: BUILD.bazel  Dockerfile  tsconfig.json
apps/api-gateway/src/: app.controller.ts  app.module.ts  main.ts
apps/auth-service/: BUILD.bazel  Dockerfile
apps/auth-service/src/: auth.controller.ts  auth.module.ts  auth.service.ts  main.ts
apps/frontend/: BUILD.bazel  middleware.ts  next-cli.js  next.config.js  package.json  tailwind.config.js
apps/frontend/.next/dev/: build-manifest.json  prerender-manifest.json  trace
apps/frontend/.next/dev/cache/: .rscinfo
apps/frontend/.next/dev/cache/turbopack/0c06f068/: 00000002.sst  00000004.sst  00000005.sst  00000017.sst  00000018.sst  00000024.sst  00000026.sst  00000031.sst  00000037.sst  00000043.sst  00000044.sst  00000045.sst  00000046.sst  00000052.sst  00000059.sst  00000061.sst  00000062.sst  00000069.sst  00000071.sst  00000072.sst  00000079.sst  00000084.sst  00000086.sst  00000091.sst  00000093.sst  00000094.sst  00000101.sst  00000106.sst  00000113.sst  00000119.sst  00000120.sst  00000121.sst  00000122.sst  00000129.sst  00000130.sst  00000131.sst  00000132.sst  00000139.sst  00000141.sst  00000142.sst  (+26 more)
apps/frontend/.next/dev/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
apps/frontend/.next/dev/server/app/: page.js  page_client-reference-manifest.js
apps/frontend/.next/dev/server/app/insights/: page.js  page_client-reference-manifest.js
apps/frontend/.next/dev/server/app/network/: page.js  page_client-reference-manifest.js
apps/frontend/.next/dev/server/app/page/: build-manifest.json
apps/frontend/.next/dev/server/chunks/ssr/: 1bc17_next_dist_3372dd6f._.js  1bc17_next_dist_3372dd6f._.js.map  1bc17_next_dist_75e09e53._.js  1bc17_next_dist_75e09e53._.js.map  1bc17_next_dist_a31770fc._.js  1bc17_next_dist_a31770fc._.js.map  1bc17_next_dist_ab11d2ae._.js  1bc17_next_dist_bcd3e3cb._.js  1bc17_next_dist_bcd3e3cb._.js.map  1bc17_next_dist_client_components_builtin_forbidden_5e6c0e28.js  1bc17_next_dist_client_components_builtin_forbidden_5e6c0e28.js.map  1bc17_next_dist_client_components_builtin_global-error_bc79f032.js  1bc17_next_dist_client_components_builtin_global-error_bc79f032.js.map  1bc17_next_dist_client_components_builtin_unauthorized_4006f8d3.js  1bc17_next_dist_client_components_builtin_unauthorized_4006f8d3.js.map  1bc17_next_dist_client_components_d4317c1e._.js  1bc17_next_e0902262._.js  (+26 more)
apps/frontend/.next/dev/server/pages/: _app.js  _document.js  _error.js
apps/frontend/.next/dev/static/chunks/: 1bc17_next_app_95874534.js  1bc17_next_app_95874534.js.map  1bc17_next_dist_1a1574fd._.js  1bc17_next_dist_1a1574fd._.js.map  1bc17_next_dist_abe579c5._.js  1bc17_next_dist_abe579c5._.js.map  1bc17_next_dist_b07de59e._.js  1bc17_next_dist_b07de59e._.js.map  1bc17_next_dist_b590c6bc._.js  1bc17_next_dist_b590c6bc._.js.map  1bc17_next_dist_client_614c552d._.js  1bc17_next_dist_client_614c552d._.js.map  1bc17_next_dist_client_817dc6c1._.js  1bc17_next_dist_client_817dc6c1._.js.map  1bc17_next_dist_client_components_builtin_global-error_bd233b47.js  1bc17_next_dist_compiled_b571389e._.js  1bc17_next_dist_compiled_b571389e._.js.map  1bc17_next_dist_compiled_d75cca28._.js  1bc17_next_dist_compiled_d75cca28._.js.map  1bc17_next_dist_compiled_next-devtools_index_0f997572.js  1bc17_next_dist_compiled_react-dom_871fd302._.js  1bc17_next_dist_compiled_react-dom_871fd302._.js.map  1bc17_next_dist_compiled_react-server-dom-turbopack_0930d060._.js  1bc17_next_dist_compiled_react-server-dom-turbopack_0930d060._.js.map  1bc17_next_dist_d48f711a._.js  1bc17_next_dist_d48f711a._.js.map  1bc17_next_dist_shared_lib_2f0c78e1._.js  1bc17_next_dist_shared_lib_2f0c78e1._.js.map  1bc17_next_dist_shared_lib_bd36e248._.js  1bc17_next_dist_shared_lib_bd36e248._.js.map  1bc17_next_error_60fd1504.js  1bc17_next_error_60fd1504.js.map  69652_@swc_helpers_cjs_679851cc._.js.map  91e01_react-dom_b892b2f5._.js  91e01_react-dom_b892b2f5._.js.map  [next]_entry_page-loader_ts_59481b19._.js  [next]_entry_page-loader_ts_f6eec326._.js  [root-of-the-server]__04b715bc._.js  [root-of-the-server]__9b95de93._.js  [turbopack]_browser_dev_hmr-client_hmr-client_ts_5059e2bb._.js  (+14 more)
apps/frontend/.next/dev/types/: routes.d.ts  validator.ts
apps/frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
apps/frontend/app/api/proxy/[...path]/: route.ts
apps/frontend/app/chat/: page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/app/insights/: page.tsx
apps/frontend/app/login/: page.tsx
apps/frontend/app/network/: page.tsx
apps/frontend/app/register/: page.tsx
apps/frontend/components/: SignOutButton.tsx
apps/frontend/components/dashboard/: CreateGoalWidget.tsx  GoalCard.tsx
apps/frontend/components/layout/: Navbar.tsx
apps/frontend/components/ui/: Button.tsx  InputField.tsx  SelectField.tsx
apps/frontend/lib/: api-client.ts  api.ts
apps/goal-service/: BUILD.bazel  Dockerfile  tsconfig.json
apps/goal-service/src/: goal.controller.ts  goal.module.ts  main.ts
libs/database/: BUILD.bazel  schema.prisma  tsconfig.json
libs/database/src/: prisma.service.ts
libs/event_schemas/: BUILD.bazel  TaskCompletedEvent.ts  UserCreatedEvent.ts  generate_py.py  generate_ts.js  task_completed_event.py  tsconfig.json  user_created_event.py
libs/event_schemas/schemas/: task.completed.json  user.created.json
libs/exceptions/: BUILD.bazel  tsconfig.json
libs/exceptions/src/: global-exception.filter.ts
libs/security/: BUILD.bazel
libs/security/src/: jwt-auth.guard.ts  redis.service.ts
libs/telemetry/: BUILD.bazel
libs/telemetry/src/: tracer.ts
(+16 files in other folders)
