module(
    name = "knowledge_hub_os",
    version = "0.0.1",
)

# 1. Standard Bazel Library
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# 2. Node.js & TypeScript Ecosystem (Next.js, NestJS)
bazel_dep(name = "aspect_rules_js", version = "1.34.1")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
bazel_dep(name = "rules_nodejs", version = "6.0.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.18.0")
use_repo(node, "nodejs_toolchains")

# 3. Python Ecosystem (FastAPI, AI Service)
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)
use_repo(python, "python_3_11")

# --- NODE.JS DEPENDENCIES ---
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# --- PYTHON DEPENDENCIES ---
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//apps/ai-service:requirements.txt",
)

use_repo(pip, "pip")

# --- TYPESCRIPT COMPILER ---
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")