module(
    name = "knowledge_hub_os",
    version = "0.0.1",
)

# 1. Standard Bazel Library
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# 2. Node.js & TypeScript Ecosystem (Next.js, NestJS)
bazel_dep(name = "aspect_rules_js", version = "1.34.1")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")
bazel_dep(name = "rules_nodejs", version = "6.0.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "18.18.0")
use_repo(node, "nodejs_toolchains")

# 3. Python Ecosystem (FastAPI, AI Service)
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)
use_repo(python, "python_3_11")

# --- NODE.JS DEPENDENCIES ---
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# --- PYTHON DEPENDENCIES ---
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//apps/ai-service:requirements.txt",
)

use_repo(pip, "pip")

# --- TYPESCRIPT COMPILER ---
rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)
use_repo(rules_ts_ext, "npm_typescript")

# -----------------------------
# rules_oci (Docker Containerization)
# -----------------------------
bazel_dep(name = "rules_oci", version = "1.7.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Node Distroless Base (used for frontend pkg_tar — no bash needed)
oci.pull(
    name = "distroless_nodejs",
    digest = "sha256:a3c4d477f3f303cfdf2b43b0a255fb5a0d435957b466819b3c0940d9d05404b6", # Node 20
    image = "gcr.io/distroless/nodejs20-debian11",
    platforms = ["linux/amd64", "linux/arm64"],
)

# Node 20 Slim — has bash; required for js_image_layer NestJS launcher scripts
oci.pull(
    name = "node_slim",
    digest = "sha256:d8a35d586fad3af7abb6fdb9ba972388395405f4d462da9e4a4ddcde67b5e0fb",
    image = "docker.io/library/node",
    platforms = ["linux/amd64", "linux/arm64"],
)

# Python Distroless Base
oci.pull(
    name = "distroless_python",
    digest = "sha256:72c0ee6f962df1ad412dc94d0cdf8a0e3197447235da79fa93b2f3e1ac4d2f4e", # Python 3.11
    image = "gcr.io/distroless/python3-debian11",
    platforms = ["linux/amd64", "linux/arm64"],
)

use_repo(oci, "distroless_nodejs", "distroless_python", "node_slim")