load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "ai-service",
    srcs = ["main.py"],
    main = "main.py",
    deps = [
        requirement("fastapi"),
        requirement("uvicorn"),
        requirement("pydantic"),
        requirement("aiokafka"),
        requirement("motor"),
        requirement("python-dotenv"),
        requirement("langchain"),
        requirement("langchain-google-genai"),
        requirement("email-validator"),
        requirement("PyJWT"),
        requirement("tenacity"),
        requirement("structlog"),
        "//libs/event_schemas:py_contracts",
    ],
    data = ["//:.env"],
)

py_binary(
    name = "test_ai",
    srcs = ["test_ai.py"],
    main = "test_ai.py",
    deps = [
        requirement("pydantic"),
        requirement("python-dotenv"),
        requirement("langchain"),
        requirement("langchain-google-genai"),
        requirement("email-validator"),
    ],
)
