load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    tsconfig = "tsconfig.json",
    declaration = True,
    transpiler = "tsc",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/platform-express",
        "//:node_modules/reflect-metadata",
        "//:node_modules/rxjs",
        "//:node_modules/@types/node",
        "//libs/event_schemas:ts_contracts",
        "//:node_modules/kafkajs",
        "//:node_modules/@nestjs/microservices",
        "//libs/database:database_lib",
        "//:node_modules/@prisma/client",
        "//libs/security:security_lib",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/@types/express",
    ],
)

js_binary(
    name = "api-gateway",
    data = [
        ":compile",
        "//:node_modules/reflect-metadata",
        "//:node_modules/@prisma/client",
        "//libs/security:security_lib",
        "//:node_modules/@nestjs/jwt",
    ],
    entry_point = "src/main.js",
    env = {
        "DATABASE_URL": "postgresql://neondb_owner:npg_qKAGa3H1PbvU@ep-curly-mode-aieehupq-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require",
        "MONGO_URI": "mongodb+srv://nazalzallu123:nazalzallu123@cluster0.uvy4n.mongodb.net/?appName=Cluster0",
        "GEMINI_API_KEY": "AIzaSyAGpDTRrg-auvQI4Sjybpauzuq6uPMDwZ4",
    },
)
