load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/bcrypt",
        "//:node_modules/@types/bcrypt",
        "//:node_modules/@types/node",
        "//libs/database:database_lib",
        "//:node_modules/@nestjs/microservices",
        "//libs/event_schemas:ts_contracts",
    ],
)

js_binary(
    name = "auth-service",
    data = [
        ":compile",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/bcrypt",
        "//libs/database:database_lib",
        "//:node_modules/@prisma/client",
        "//:node_modules/@nestjs/microservices",
        "//libs/event_schemas:ts_contracts",
    ],
    entry_point = "src/main.js",
    env = {
        "DATABASE_URL": "postgresql://neondb_owner:npg_qKAGa3H1PbvU@ep-curly-mode-aieehupq-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require",
    },
)
