load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/bcrypt",
        "//:node_modules/@types/bcrypt",
        "//:node_modules/@types/node",
        "//libs/database:database_lib",
        "//:node_modules/@nestjs/microservices",
        "//libs/event_schemas:ts_contracts",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//libs/exceptions:exceptions_lib",
        "//libs/security:security_lib",
    ],
)

js_binary(
    name = "auth-service",
    data = [
        ":compile",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/bcrypt",
        "//libs/database:database_lib",
        "//:node_modules/@prisma/client",
        "//:node_modules/@nestjs/microservices",
        "//libs/event_schemas:ts_contracts",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//:node_modules/pino",
        "//:node_modules/pino-http",
        "//:node_modules/pino-pretty",
        "//libs/exceptions:exceptions_lib",
        "//libs/security:security_lib",
        "//:env",
    ],
    entry_point = "src/main.js",
)

# 1. Package the Node.js compiled binary into a tar layer
js_image_layer(
    name = "app_layer",
    binary = ":auth-service",
    root = "/app",
)

# 2. Inject the layer into the Distroless container
oci_image(
    name = "image",
    base = "@node_slim",
    tars = [":app_layer"],
    entrypoint = ["/app/apps/auth-service/auth-service"],
    workdir = "/app",
)

# 3. Create the Tarball for Docker runtime
oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["knowledgehub/auth-service:latest"],
)
