load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/@nestjs/microservices",
        "//:node_modules/@types/node",
        "//:node_modules/@types/express",
        "//libs/database:database_lib",
        "//libs/security:security_lib",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//libs/exceptions:exceptions_lib",
    ],
)

js_binary(
    name = "goal-service",
    data = [
        ":compile",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/@nestjs/microservices",
        "//libs/database:database_lib",
        "//libs/security:security_lib",
        "//:node_modules/@prisma/client",
        "//:node_modules/reflect-metadata",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//:node_modules/pino",
        "//:node_modules/pino-http",
        "//:node_modules/pino-pretty",
        "//libs/exceptions:exceptions_lib",
        "//:.env",
    ],
    entry_point = "src/main.js",
    chdir = package_name(),
)
