load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "compile",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
    deps = [
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/@nestjs/microservices",
        "//:node_modules/@types/node",
        "//:node_modules/@types/express",
        "//libs/database:database_lib",
        "//libs/security:security_lib",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//libs/exceptions:exceptions_lib",
        "//libs/telemetry:telemetry_lib",
        "//:node_modules/prom-client",
        "//:node_modules/@opentelemetry/sdk-node",
        "//:node_modules/@opentelemetry/exporter-trace-otlp-http",
        "//:node_modules/@opentelemetry/resources",
        "//:node_modules/@opentelemetry/semantic-conventions",
        "//:node_modules/@opentelemetry/sdk-trace-base",
        "//:node_modules/@opentelemetry/instrumentation-http",
        "//:node_modules/@opentelemetry/instrumentation-express",
        "//:node_modules/@opentelemetry/instrumentation-nestjs-core",
        "//:node_modules/opentelemetry-instrumentation-kafkajs",
    ],
)

js_binary(
    name = "goal-service",
    data = [
        ":compile",
        "//:node_modules/@nestjs/common",
        "//:node_modules/@nestjs/core",
        "//:node_modules/@nestjs/jwt",
        "//:node_modules/@nestjs/microservices",
        "//libs/database:database_lib",
        "//libs/security:security_lib",
        "//:node_modules/@prisma/client",
        "//:node_modules/reflect-metadata",
        "//:node_modules/@nestjs/config",
        "//:node_modules/nestjs-pino",
        "//:node_modules/pino",
        "//:node_modules/pino-http",
        "//:node_modules/pino-pretty",
        "//libs/exceptions:exceptions_lib",
        "//libs/telemetry:telemetry_lib",
        "//:node_modules/prom-client",
        "//:env",
    ],
    entry_point = "src/main.js",
    chdir = package_name(),
)

# 1. Package the Node.js compiled binary into a tar layer
js_image_layer(
    name = "app_layer",
    binary = ":goal-service",
    root = "/app",
)

# 2. Inject the layer into the Distroless container
oci_image(
    name = "image",
    base = "@node_slim",
    tars = [":app_layer"],
    entrypoint = ["/app/apps/goal-service/goal-service"],
    workdir = "/app",
)

# 3. Create the Tarball for Docker runtime
oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["knowledgehub/goal-service:latest"],
)
